# s3downloader

./: .env.skel  .envrc.skel  .gitignore  Procfile  README.md  babel.cfg  docker-compose.yml  pyproject.toml
app/: Dockerfile  entrypoint.sh  requirements.txt
app/s3downloader/: aws.py  config.py  corpus.py  mail.py  scripts.py  whitelist.py  wsgi.py
app/s3downloader/static/: decrypt.sh  handle.py  prepare_cert.sh  style.css
app/s3downloader/templates/: admin_pending.html  base.html  email.corpus.html  email.notify_admin_notice.html  email.notify_admin_request.html  email.rejection.html  index.html  rejection_sent.html  sub.can_close.html  sub.jsonl.html  urls_sent.html
app/s3downloader/templates/en/: email.notify_admin_notice.html  email.notify_admin_request.html  email.rejection.html  index.html  sub.can_close.html  urls_sent.html
app/s3downloader/templates/ja/: admin_pending.html  email.corpus.html
app/s3downloader/translations/: messages.pot
app/s3downloader/translations/en/LC_MESSAGES/: messages.po
app/s3downloader/translations/ja/LC_MESSAGES/: messages.po
