[tool.poetry]
name = "s3downloader"
version = "0.1.0"
description = "S3 dataset downloader with approval workflow"
authors = ["amadan"]
readme = "README.md"
packages = [{include = "s3downloader", from = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
wheel = "^0.42.0"
gunicorn = "^21.2.0"
flask = "^2.3.0"
flask-mail = "^0.9.1"
boto3 = "^1.34.0"
pyyaml = "^6.0"
requests = "^2.31.0"
atomicwrites = "^1.4.1"
flask-babel = {git = "https://github.com/amadanmath/flask-babel.git"}

[tool.poetry.scripts]
serve = "s3downloader.scripts:serve"
sign = "s3downloader.scripts:sign"
mocksmtp = "s3downloader.scripts:mocksmtp"
dev = "s3downloader.scripts:dev"
check-certs = "s3downloader.scripts:check_certs"

[tool.poetry.group.dev.dependencies]
aiosmtpd = "^1.4.6"
honcho = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"